--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ matrix:
 install: mvn install
 
 after_success:
-  - mvn clean test
+  - mvn -DrepoToken=${coveralls_token} clean test jacoco:report coveralls:report
