--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     <dependency>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-assembly-plugin</artifactId>
-      <version>3.7.1</version>
+      <version>3.2.0</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -148,7 +148,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>3.1.1</version>
+        <version>3.0.0-M1</version>
         <configuration>
           <releaseProfiles>release</releaseProfiles>
         </configuration>
