--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -50,8 +50,10 @@ jobs:
             * 2
             * 3
             InputComesFromHERE
+        
     - name: Release
       uses: softprops/action-gh-release@v2
+      if: github.ref_type == 'tag'
       with:
         body_path: body.txt
         token: ${{ secrets.GITHUB_TOKEN }}
