--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.sfuhrm</groupId>
   <artifactId>message-digest-assembly-handler</artifactId>
-  <version>0.9.4-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <name>MessageDigest Maven Assembly Handler</name>
   <description>Calculates message digest file for the contents in a Maven archiver archive</description>
@@ -28,7 +28,7 @@
     <url>https://github.com/sfuhrm/message-digest-assembly-handler.git</url>
     <connection>scm:git:git@github.com:sfuhrm/message-digest-assembly-handler.git</connection>
     <developerConnection>scm:git:git@github.com:sfuhrm/message-digest-assembly-handler.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>message-digest-assembly-handler-1.0.0</tag>
   </scm>
 
   <properties>
